amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/wrong-directive-location.api.federation.report
ModelId: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/wrong-directive-location.api.graphql
Profile: GraphQL
Conforms: false
Number of results: 4

Level: Violation

- Constraint: http://a.ml/vocabularies/amf/parser#invalid-directive-application
  Message: Directive MyDirective cannot be applied to schema
  Severity: Violation
  Target: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/wrong-directive-location.api.graphql#/web-api
  Property: http://a.ml/vocabularies/document#customDomainProperties
  Range: [(1,7)-(1,19)]
  Location: 

- Constraint: http://a.ml/vocabularies/amf/parser#invalid-directive-application
  Message: Directive MyDirective cannot be applied to object 'MyObject'
  Severity: Violation
  Target: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/wrong-directive-location.api.graphql#/declares/shape/MyObject
  Property: http://a.ml/vocabularies/document#customDomainProperties
  Range: [(11,14)-(11,26)]
  Location: 

- Constraint: http://a.ml/vocabularies/amf/parser#invalid-directive-application
  Message: Directive MyDirective cannot be applied to argument 'myArgument'
  Severity: Violation
  Target: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/wrong-directive-location.api.graphql#/declares/shape/MyObject/supportedOperation/myField/expects/request/parameter/parameter/myArgument
  Property: http://a.ml/vocabularies/document#customDomainProperties
  Range: [(12,31)-(12,43)]
  Location: 

- Constraint: http://a.ml/vocabularies/amf/parser#invalid-directive-application
  Message: Directive MyDirective cannot be applied to field 'myField'
  Severity: Violation
  Target: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/wrong-directive-location.api.graphql#/declares/shape/MyObject/supportedOperation/myField
  Property: http://a.ml/vocabularies/document#customDomainProperties
  Range: [(12,54)-(12,66)]
  Location: 
